Fix box-overflow

--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -406,7 +406,6 @@ CONTENT
   padding: 0.5em 1em;
   display: inline-block;
   min-height: 1em;
-  width: 100%;
   height: 100%;
   white-space: pre-wrap;
   font-family: monospace;
